examples/test/testpolicy15785.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15785
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key41: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value19
          key47: value37
          key27: value42
      podSelector:
        matchLabels:
          key22: value3
          key40: value16
